--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "NODE_ENV=production webpack -p --env production",
     "release:tag": "git tag $npm_package_version && git push --tags",
     "test:lint": "eslint src/**/*.js",
-    "test:jest": "jest --verbose --coverage --detectOpenHandles",
+    "test:jest": "jest --verbose --coverage",
     "test": "npm run test:lint && npm run test:jest"
   },
   "files": [
