--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tall",
-  "version": "1.0.2",
+  "version": "2.0.0",
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=4.3.2"
+    "node": ">=6.14.4"
   },
   "scripts": {
     "build": "NODE_ENV=production webpack -p --env production",
@@ -13,6 +13,11 @@
     "test:jest": "jest --verbose --coverage",
     "test": "npm run test:lint && npm run test:jest"
   },
+  "files": [
+    "lib/",
+    "src/",
+    "!src/__tests__"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lmammino/tall.git"
@@ -28,18 +33,24 @@
   },
   "homepage": "https://github.com/lmammino/tall#readme",
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "codecov": "^2.1.0",
-    "eslint": "^3.18.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "jest": "^19.0.2",
-    "webpack": "^2.3.2"
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "codecov": "^3.1.0",
+    "eslint": "^5.6.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "jest": "^23.6.0",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2"
   },
   "keywords": [
     "URL",
@@ -53,5 +64,15 @@
     "promise",
     "no depenencies",
     "no dependency"
-  ]
+  ],
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "babel-loader": "^8.0.4"
+  },
+  "jest": {
+    "verbose": true,
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
+  }
 }
