--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
       '@babel/preset-env',
       {
         useBuiltIns: 'entry',
+        corejs: 3,
         targets: {
           node: '6.14.4'
         }
