--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tall",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "main": "lib/index.js",
   "engines": {
@@ -68,7 +68,8 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "babel-loader": "^8.0.4"
+    "babel-loader": "^8.0.4",
+    "core-js": "^3.0.1"
   },
   "jest": {
     "verbose": true,
