--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "tall",
-  "version": "2.3.0",
+  "version": "3.0.0",
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=6.14.4"
+    "node": ">=8.0.0"
   },
+  "engineStrict": true,
   "scripts": {
     "build": "NODE_ENV=production webpack -p --env production",
     "release:tag": "git tag $npm_package_version && git push --tags",
