--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "tall",
-  "version": "2.2.0",
+  "version": "3.0.0",
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "main": "lib/index.js",
   "engines": {
-    "node": ">=6.14.4"
+    "node": ">=8.0.0"
   },
+  "engineStrict": true,
   "scripts": {
     "build": "NODE_ENV=production webpack -p --env production",
     "release:tag": "git tag $npm_package_version && git push --tags",
@@ -34,24 +35,24 @@
   },
   "homepage": "https://github.com/lmammino/tall#readme",
   "devDependencies": {
-    "@babel/cli": "^7.1.2",
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.5.0",
-    "codecov": "^3.2.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "jest": "^24.5.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2"
+    "babel-jest": "^24.9.0",
+    "codecov": "^3.6.1",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "jest": "^24.9.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "keywords": [
     "URL",
@@ -67,9 +68,9 @@
     "no dependency"
   ],
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "core-js": "^3.0.1"
+    "@babel/polyfill": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.6.4"
   },
   "jest": {
     "verbose": true,
