--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.0.0",
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "main": "lib/index.js",
+  "typings": "src/index.d.ts",
   "engines": {
     "node": ">=8.0.0"
   },
