--- a/tsconfig-cjs.json
+++ b/tsconfig-cjs.json
@@ -1,7 +1,8 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "outDir": "./lib/cjs"
+    "module": "commonjs",
+    "outDir": "./lib/cjs",
+    "esModuleInterop": false
   },
 }
