--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [12, 13, 14, 15, 16, 17]
+        node: [14, 15, 16, 17, 18]
 
     steps:
       - name: Checkout
