--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "core"
   ],
   "scripts": {
-    "test": "npm test --workspaces"
+    "test": "npm test --workspaces",
+    "build": "npm run build --if-present --workspaces"
   },
   "repository": {
     "type": "git",
