--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "test": "npm test --workspaces",
-    "build": "npm run build --if-present --workspaces"
+    "build": "npm run build --if-present --workspaces",
+    "build:test": "npm run build:test --if-present --workspaces"
   },
   "repository": {
     "type": "git",
