--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "npm test --workspaces",
     "build": "npm run build --if-present --workspaces",
-    "build:test": "npm run build:test --if-present --workspaces"
+    "build:test": "npm run build:test --if-present --workspaces",
+    "publish": "npm publish --if-present --workspaces"
   },
   "repository": {
     "type": "git",
