Use https protocol with author URL

--- a/packages/tall/package.json
+++ b/packages/tall/package.json
@@ -34,7 +34,7 @@
   },
   "author": {
     "name": "Luciano Mammino",
-    "url": "http://loige.co"
+    "url": "https://loige.co"
   },
   "license": "MIT",
   "bugs": {
