--- a/packages/tall/package.json
+++ b/packages/tall/package.json
@@ -56,19 +56,19 @@
     "typescript"
   ],
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "codecov": "^3.8.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "jest": "^27.5.1",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "jest": "^29.1.2",
     "nock": "^13.0.6",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   }
