--- a/package.json
+++ b/package.json
@@ -21,5 +21,22 @@
   "bugs": {
     "url": "https://github.com/lmammino/tall/issues"
   },
-  "homepage": "https://github.com/lmammino/tall#readme"
+  "homepage": "https://github.com/lmammino/tall#readme",
+  "devDependencies": {
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "codecov": "^3.8.1",
+    "eslint": "^8.25.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-promise": "^6.0.1",
+    "jest": "^29.1.2",
+    "nock": "^13.0.6",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5"
+  }
 }
