--- a/packages/tall/package.json
+++ b/packages/tall/package.json
@@ -23,10 +23,7 @@
     "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json",
     "build:test": "node test/commonjs.cjs && node test/esm.js",
     "prepublish": "npm run build",
-    "prepare": "npm run build",
-    "test:lint": "eslint .",
-    "test:unit": "jest --coverage --verbose",
-    "test": "npm run test:lint && npm run test:unit"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
