--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "packages/*"
   ],
   "scripts": {
-    "test": "npm test --workspaces",
+    "format": "prettier --write ./**/*.{cjs,js,ts,json}",
+    "test:format": "prettier --list-different ./**/*.{cjs,js,ts,json}",
+    "test:lint": "eslint .",
+    "test:unit": "jest --coverage --verbose",
+    "test": "npm run test:format && npm run test:lint && npm run test:unit",
     "build": "npm run build --if-present --workspaces",
     "build:test": "npm run build:test --if-present --workspaces"
   },
@@ -29,12 +33,14 @@
     "@typescript-eslint/parser": "^5.12.0",
     "codecov": "^3.8.1",
     "eslint": "^8.25.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-promise": "^6.0.1",
     "jest": "^29.1.2",
     "nock": "^13.0.6",
+    "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
