--- a/packages/tall-plugin-meta-refresh/package.json
+++ b/packages/tall-plugin-meta-refresh/package.json
@@ -58,21 +58,7 @@
     "typescript"
   ],
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "codecov": "^3.8.1",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "jest": "^27.5.1",
-    "nock": "^13.0.6",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typescript": "^4.5.5"
+    "@types/htmlparser2": "^3.10.3"
   },
   "dependencies": {
     "htmlparser2": "^8.0.1"
