--- a/packages/tall-plugin-meta-refresh/package.json
+++ b/packages/tall-plugin-meta-refresh/package.json
@@ -58,7 +58,8 @@
     "typescript"
   ],
   "devDependencies": {
-    "@types/htmlparser2": "^3.10.3"
+    "@types/htmlparser2": "^3.10.3",
+    "tall": ">=5.0.0"
   },
   "dependencies": {
     "htmlparser2": "^8.0.1"
