Reorder workspaces for npm build
npm workspaces cannot yet order the builds of the workspace packages in the
correct (topological) order:

- https://github.com/npm/cli/issues/4139
- https://github.com/npm/cli/issues/3034#issuecomment-885290017
- https://github.com/npm/statusboard/issues/517

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
   "private": true,
   "workspaces": [
-    "packages/*"
+    "packages/tall",
+    "packages/tall-*"
   ],
   "scripts": {
     "format": "prettier --write ./**/*.{cjs,js,ts,json}",
