--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,26 +6,24 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [14, 15, 16, 17, 18]
+        node: [16, 17, 18]
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Use Node ${{ matrix.node }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node }}.x
 
       - name: Use cached node_modules
-        uses: actions/cache@v1
+        uses: actions/cache@v3
         with:
           path: node_modules
           key: nodeModules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            nodeModules-
 
-      - name: Make sure npm is used
+      - name: Upgrade npm for older versions of Node.js
         run: npm install -g npm@^8.5
         env:
           CI: true
@@ -41,7 +39,7 @@ jobs:
           CI: true
 
       - name: Send coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage/lcov.info
