--- a/packages/tall-plugin-meta-refresh/package.json
+++ b/packages/tall-plugin-meta-refresh/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tall",
+  "name": "tall-plugin-meta-refresh",
   "version": "6.0.0",
-  "description": "Promise-based, No-dependency URL unshortner (expander) module for Node.js",
+  "description": "Tall plugin for following redirects in <meta http-equiv=\"refresh\"> tags",
   "type": "module",
   "main": "./lib/cjs/index.js",
   "module": "./lib/esm/index.js",
@@ -11,8 +11,7 @@
   },
   "files": [
     "lib/",
-    "!lib/**/*.test*",
-    "!lib/**/jest.*"
+    "!lib/**/*.test*"
   ],
   "engines": {
     "node": ">=16.0.0"
@@ -22,16 +21,16 @@
     "clean": "rm -rf ./lib",
     "build": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json && echo '{\"type\":\"commonjs\"}' > lib/cjs/package.json",
     "build:test": "node test/commonjs.cjs && node test/esm.js",
-    "prepublish": "npm run build",
-    "prepare": "npm run build"
+    "prepublish": "cd ../.. && npm run build",
+    "prepare": "cd ../.. && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lmammino/tall.git"
   },
   "author": {
-    "name": "Luciano Mammino",
-    "url": "https://loige.co"
+    "name": "Karl Horky",
+    "url": "https://github.com/karlhorky"
   },
   "license": "MIT",
   "bugs": {
@@ -44,6 +43,10 @@
     "unshortner",
     "expander",
     "tall",
+    "tall plugin",
+    "meta",
+    "meta refresh",
+    "http-equiv",
     "link",
     "expand link",
     "expand url",
@@ -51,5 +54,14 @@
     "no depenencies",
     "no dependency",
     "typescript"
-  ]
+  ],
+  "devDependencies": {
+    "@types/htmlparser2": "^3.10.3"
+  },
+  "dependencies": {
+    "htmlparser2": "^8.0.1"
+  },
+  "peerDependencies": {
+    "tall": ">=5.0.0"
+  }
 }
